--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ apache-airflow = "^2.10.4"
 great-expectations = "^1.3.4"
 numpy = "1.26.4"
 pandas = "2.1.4"
+fastapi = "^0.115.8"
+uvicorn = "^0.34.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
