--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "dsp-restaurant-sales"
+name = "dsp-restaurant-tips"
 version = "0.1.0"
 description = ""
 authors = ["nguyen <nguyenhainguyen2606@gmail.com>"]
