--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = "^0.34.0"
 python-dotenv = "^1.0.1"
 pytest = "^8.3.4"
 ruff = "^0.9.4"
+pytest-asyncio = "^0.25.3"
 xgboost = "^2.1.3"
 
 
