--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pytest = "^8.3.4"
 ruff = "^0.9.4"
 pytest-asyncio = "^0.25.3"
 xgboost = "^2.1.3"
+python-multipart = "^0.0.20"
+scikit-learn = "^1.6.1"
 
 
 [build-system]
