--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,8 @@ cython_debug/
 /src/data_ml_models/raw/
 /src/data_ml_models/processed/
 /src/data_ml_models/feature_engineering/
+/airflow.cfg
+/airflow-webserver.pid
+/webserver_config.py
+/postgres_data/
+/logs/
