--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_PASSWORD = admin_password
 DB_NAME = postgres_db
 DB_HOST = postgres
 DB_PORT = 5432
-DATABASE_URL = postgres://admin_user:admin_password@postgres:5432/postgres_db
+DATABASE_URL = postgresql+psycopg2://admin_user:admin_password@localhost:5432/postgres_db
