--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-multipart = "^0.0.20"
 scikit-learn = "^1.6.1"
 sqlmodel = "0.0.11"
 alembic = "^1.14.1"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
