--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pytest-asyncio = "^0.25.3"
 xgboost = "^2.1.3"
 python-multipart = "^0.0.20"
 scikit-learn = "^1.6.1"
+sqlmodel = "0.0.11"
+alembic = "^1.14.1"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
