--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ DB_NAME = postgres_db
 DB_HOST = postgres
 DB_PORT = 5432
 DATABASE_URL = postgresql+psycopg2://admin_user:admin_password@localhost:5432/postgres_db
+
+MS_TEAMS_WEBHOOK_URL = https://webhookbot.c-toss.com/api/bot/webhooks/22e68274-2bc4-4698-86bb-9383f63fff3a
+
