--- a/example_cfg_for_airflow.cfg
+++ b/example_cfg_for_airflow.cfg
@@ -128,7 +128,7 @@ load_examples = False
 #
 # Variable: AIRFLOW__CORE__PLUGINS_FOLDER
 #
-plugins_folder = /Users/nguyennguyen/Desktop/github_repos/personal/dsp_restaurant_tips/plugins
+plugins_folder = plugins
 
 # Should tasks be executed via forking of the parent process
 # 
