refactor prediction pipeline

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ DATABASE_URL = postgresql+psycopg2://admin_user:admin_password@localhost:5432/po
 
 MS_TEAMS_WEBHOOK_URL = https://webhookbot.c-toss.com/api/bot/webhooks/22e68274-2bc4-4698-86bb-9383f63fff3a
 
-API_URL = http://127.0.0.1:8000/v1
+API_URL = http://localhost:8000/v1
 
