--- a/backup_pyproject.toml
+++ b/backup_pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "dsp_restaurant_sales"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 streamlit = "^1.41.1"
-apache-airflow = "^2.10.4"
+apache-airflow = "2.10.5"
 great-expectations = "^1.3.4"
 numpy = "1.26.4"
 pandas = "2.1.4"
@@ -26,6 +26,7 @@ sqlmodel = "0.0.11"
 psycopg2-binary = "^2.9.10"
 pymsteams = "^0.2.5"
 alembic = "^1.14.1"
+apache-airflow-providers-postgres = "^6.0.0"
 
 
 [build-system]
